FIX: Big logo SVG ("B" placement in "Blog"), z-indexes of intro section's divs

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -848,6 +848,7 @@ svg {
                 bottom: 0;
                 right: 0;
                 text-align: left;
+                z-index: 800;
 
                 border-top-left-radius: 16px;
 
@@ -901,6 +902,7 @@ svg {
                 backdrop-filter: blur(2px);
                 -webkit-backdrop-filter: blur(2px);
                 border: 1px solid var(--color-whites);
+                z-index: 800;
 
                 p {
                     color: var(--color-whites);
@@ -1002,6 +1004,7 @@ svg {
             bottom: 0;
             margin: 0;
             padding: 0;
+            z-index: 800;
 
             display: flex;
             gap: 2px;
